<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/gradient_background"
    tools:context=".view.first.MainActivity">


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:maxWidth="100dp"
        android:padding="15dp"
        android:background="@drawable/edit_text_background"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextPalindrome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/palindrome"
        android:inputType="text"
        android:minHeight="48dp"
        android:maxWidth="100dp"
        android:padding="15dp"
        android:background="@drawable/edit_text_background"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/buttonCheck"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="50dp"
        android:maxWidth="100dp"
        android:background="@drawable/button_background"
        android:text="@string/btnCheck" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:maxWidth="100dp"
        android:background="@drawable/button_background"
        android:text="@string/btnNext" />
</LinearLayout>